<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        />

    <ImageView
        android:id="@+id/statusOffline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:src="@drawable/error"/>
    <ImageView
        android:id="@+id/backdropImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/posterexample"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/nestedScrollView"
        android:layout_marginTop="250dp"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

    <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"/>


        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mission: Impossible - Dead Reckoning Part One"
            android:fontFamily="@font/inter_black"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moviePoster"
            android:textSize="18sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="1sp"

            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/movieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:text="2023"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieName"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/movieRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="150 min"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/movieGenreMessage"
            app:layout_constraintTop_toBottomOf="@+id/movieReleaseDate"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="8dp"
             />

        <TextView
            android:id="@+id/movieGenreMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieGenre"
            android:textSize="15sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieRuntime"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/movieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieGenreFromApi"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/movieGenreMessage"
            app:layout_constraintTop_toBottomOf="@id/movieGenreMessage"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:isIndicator="true"
            android:theme="@style/RatingBar"
            app:layout_constraintTop_toBottomOf="@id/ratingMessage"
            />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ratingBar"
            app:layout_constraintTop_toTopOf="@id/ratingBar"
            app:layout_constraintBottom_toBottomOf="@id/ratingBar"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ratingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratingMessage"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/movieDescription"/>
        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moviePoster"

            android:fontFamily="@font/inter_black"
            android:layout_marginTop="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/watchlistaddlogo"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deletebutton"
        app:tint="@color/white" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>
